worked on header and footer alignment for screens over 2560 width, fixed css or pages that are not included in mvp

--- a/client/src/style/AppContainer.css
+++ b/client/src/style/AppContainer.css
@@ -10,8 +10,8 @@
 .services,
 .sign-up,
 .sign-in,
-.terms,
-.testimonials,
+/* .terms,
+.testimonials, */
 .preview,
 .error {
     display: flex;
